[gd_scene load_steps=2 format=3 uid="uid://bl5gdx6efeb0g"]

[ext_resource type="Script" uid="uid://bocip5w6ydu6f" path="res://scripts/interface/outsideFights/reward_choice_interface.gd" id="1_txbnu"]

[node name="RewardChoiceInterface" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.172549, 0.172549, 0.74902)
script = ExtResource("1_txbnu")
metadata/_custom_type_script = "uid://bocip5w6ydu6f"
metadata/_edit_use_anchors_ = true

[node name="RewardList" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 140
alignment = 1

[node name="SkipBtnMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.46441
anchor_top = 0.657407
anchor_right = 0.53559
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 191.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 165
metadata/_edit_use_anchors_ = true

[node name="SkipBtn" type="Button" parent="SkipBtnMargin"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "SKIP"
icon_alignment = 1

[connection signal="pressed" from="SkipBtnMargin/SkipBtn" to="." method="_on_skip_btn_pressed"]
